2008-03-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-annotate-extract-revision-at-line):
	Allow "^" in a version name.

	* vc-mtn.el (vc-mtn-state): Support the added state.

2008-03-22  Carsten Dominik  <dominik@science.uva.nl>

	* org: New directory for Org-mode.

	* org/org-export-latex.el: Moved from lisp/texmodes.

	* org/org-irc.el: Moved from lisp/texmodes.

	* org/org-mac-message.el: Moved from lisp/texmodes.

	* org/org-mouse.el: Moved from lisp/texmodes.

	* org/org-publish.el: Moved from lisp/texmodes.

2008-03-21  Juri Linkov  <juri@jurta.org>

	* comint.el (comint-dynamic-simple-complete):
	Use variable `stub' for the second arg `common-substring'
	of `comint-dynamic-list-completions'.
	(comint-dynamic-list-filename-completions):
	Use variable `filenondir' for the second arg `common-substring'
	of `comint-dynamic-list-completions'.
	(comint-dynamic-list-completions): Add new optional arg
	`common-substring'.  Add `common-substring' as the second arg of
	the call to `display-completion-list'.  Doc fix.

	* comint.el (comint-dynamic-complete-as-filename)
	(comint-dynamic-list-filename-completions)
	(comint-dynamic-simple-complete): Use `minibuffer-message'
	to display message "No completions of %s" when a command
	is called in the minibuffer.
	(comint-dynamic-simple-complete): Don't display other
	completion messages when a command is called in the minibuffer.
	(comint-dynamic-list-completions): Use `minibuffer-message'
	to display message " [Type space to flush ...]" when a command
	is called in the minibuffer.

	* shell.el (shell-dynamic-complete-command)
	(shell-dynamic-complete-environment-variable): Don't display
	completion messages when command is called in the minibuffer.

	* emacs-lisp/lisp.el (lisp-complete-symbol):
	Use `minibuffer-message' to display message "No completions of %s"
	when this command is called in the minibuffer.

	* bindings.el (standard-mode-line-modes): Put special help-echo